# GraphicsExam

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  TODO
asset/model/: glider.mtl
resources/moves/: move.yaml
shader/: fragment.frag  fragmentGlider.frag  fragmentPiece.frag  vertex.vert  vertexGlider.vert  vertexPiece.vert
source/components/: GraphicsComponent.cpp  GraphicsComponent.hpp  IComponent.cpp  IComponent.hpp
source/doc/: mainpage.hpp
source/environment/: Camera.cpp  Camera.hpp  LightSource.cpp  LightSource.hpp
source/game/: Glider.cpp  Glider.hpp  HeightMap.cpp  HeightMap.hpp  Object.cpp  Object.hpp
source/header/: globalVar.hpp
source/helpers/: errorHandler.cpp  errorHandler.hpp  glfw_setup.cpp  glfw_setup.hpp  global_function.cpp  global_function.hpp
source/modeler/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  struct.hpp
source/src/: main.cpp
